// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DecibelDisplay Snapshot tests should match snapshot for Noisy 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "marginVertical": 20,
    }
  }
>
  <Text
    style={
      {
        "color": "#666",
        "fontSize": 14,
        "fontWeight": "500",
        "letterSpacing": 1,
        "marginBottom": 8,
        "textTransform": "uppercase",
      }
    }
  >
    Sound Level
  </Text>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFEBEE",
        "borderRadius": 20,
        "elevation": 4,
        "justifyContent": "center",
        "minWidth": 200,
        "opacity": 1,
        "paddingHorizontal": 40,
        "paddingVertical": 30,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 8,
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 64,
            "fontWeight": "bold",
            "lineHeight": 72,
          },
          {
            "color": "#C62828",
          },
        ]
      }
    >
      85.0
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 24,
            "fontWeight": "600",
            "marginTop": 4,
          },
          {
            "color": "#C62828",
          },
        ]
      }
    >
      dB
    </Text>
  </View>
</View>
`;

exports[`DecibelDisplay Snapshot tests should match snapshot for Normal 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "marginVertical": 20,
    }
  }
>
  <Text
    style={
      {
        "color": "#666",
        "fontSize": 14,
        "fontWeight": "500",
        "letterSpacing": 1,
        "marginBottom": 8,
        "textTransform": "uppercase",
      }
    }
  >
    Sound Level
  </Text>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFF9C4",
        "borderRadius": 20,
        "elevation": 4,
        "justifyContent": "center",
        "minWidth": 200,
        "opacity": 1,
        "paddingHorizontal": 40,
        "paddingVertical": 30,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 8,
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 64,
            "fontWeight": "bold",
            "lineHeight": 72,
          },
          {
            "color": "#F57C00",
          },
        ]
      }
    >
      65.0
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 24,
            "fontWeight": "600",
            "marginTop": 4,
          },
          {
            "color": "#F57C00",
          },
        ]
      }
    >
      dB
    </Text>
  </View>
</View>
`;

exports[`DecibelDisplay Snapshot tests should match snapshot for Quiet 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "marginVertical": 20,
    }
  }
>
  <Text
    style={
      {
        "color": "#666",
        "fontSize": 14,
        "fontWeight": "500",
        "letterSpacing": 1,
        "marginBottom": 8,
        "textTransform": "uppercase",
      }
    }
  >
    Sound Level
  </Text>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#E8F5E9",
        "borderRadius": 20,
        "elevation": 4,
        "justifyContent": "center",
        "minWidth": 200,
        "opacity": 1,
        "paddingHorizontal": 40,
        "paddingVertical": 30,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 8,
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 64,
            "fontWeight": "bold",
            "lineHeight": 72,
          },
          {
            "color": "#2E7D32",
          },
        ]
      }
    >
      45.0
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 24,
            "fontWeight": "600",
            "marginTop": 4,
          },
          {
            "color": "#2E7D32",
          },
        ]
      }
    >
      dB
    </Text>
  </View>
</View>
`;
